Overall enemy enhancements
Optimized enemy spawning by moving the can spawn function into the environment, which return a list of enemies that can spawn. Also created a new enemy found alert, with a description of what it does. Also updated to Java version 22

Signed-off-by: Gabibag <97263038+Gabibag@users.noreply.github.com>